--- a/src/pages/steps-page/StepsPage.css
+++ b/src/pages/steps-page/StepsPage.css
@@ -163,6 +163,7 @@
   }
   .header-fifth {
     font-size: 40px;
+    padding-top: 70px !important;
   }
   .test {
     margin: 0 35px;
@@ -204,7 +205,6 @@
   }
   .header-fifth {
     font-size: 25px;
-    padding: 20px 0 10px 0;
   }
 
   .test {
