--- a/src/pages/web-design/WebDesign.css
+++ b/src/pages/web-design/WebDesign.css
@@ -16,6 +16,7 @@
   text-align: center;
   font-size: 40px;
   letter-spacing: 3px;
+  padding: 0 30px;
 }
 
 .secondpicture {
@@ -31,7 +32,21 @@
 .second-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.second-container-h6 {
+  margin-top: 10px;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+}
+
+.second-container-image {
+  width: 50%;
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
@@ -103,6 +118,14 @@
     color: #f4b510;
     padding: 70px 0 30px 0;
     font-size: 40px;
+  }
+
+  .second-container-h6 {
+    width: 100%;
+  }
+
+  .second-container-image {
+    width: 100%;
   }
 }
 
