--- a/src/pages/services-page/Services.css
+++ b/src/pages/services-page/Services.css
@@ -149,6 +149,7 @@ h6 {
 
   h6 {
     font-size: 40px;
+    padding-top: 60px 0 30px 0;
   }
   .first2-fourtpage {
     justify-content: center;
@@ -184,6 +185,7 @@ h6 {
 
   h6 {
     font-size: 30px;
+    padding: 70px 0 20px 0;
     padding-bottom: 20px;
   }
   .second2-fourtpage {
