--- a/src/pages/services-page/Services.css
+++ b/src/pages/services-page/Services.css
@@ -102,7 +102,7 @@ h6 {
   }
   h6 {
     font-size: 50px;
-    padding-top: 70px;
+    padding: 70px 0 0 0;
   }
 }
 
@@ -149,7 +149,7 @@ h6 {
 
   h6 {
     font-size: 40px;
-    padding-top: 60px 0 30px 0;
+    padding: 60px 0 30px 0;
   }
   .first2-fourtpage {
     justify-content: center;
